--- a/OOP_Uygulama_Sinav_Sorulari.ipynb
+++ b/OOP_Uygulama_Sinav_Sorulari.ipynb
@@ -25,7 +25,11 @@
         "*   Son iki soruyu notebook üzerinde çözümünü yaptıktan sonra lütfen birebir olacak şekilde A4 kağıdında da çözünüz ve sınav gün ve saatinde bu kağıdı teslim etmeye geliniz. Sınav yoklama listesine imzanızı atmayı unutmayınız. Kağıda isminiz, soyisminiz ve öğrenci numaranızı yazmayı unutmayınız.\n",
         "*   **Yoklama listesine imza atmayan kişi, uygulamayı sisteme yüklemiş olsa dahi sınavı geçersiz sayılacaktır.**\n",
         "*   **IPYNB** notebook'unu sisteme yüklerken lütfen **isim-soyisim-ogrencino.ipynb** şeklinde isimlendiriniz.\n",
-        "*   Ödevi sisteme yüklemek için son teslim tarihi 11.11.2024 23:59'dur.\n",
+        "*   Ödevi sisteme yüklemek için son teslim tarihi 11.11.2024 23:59'dur Sınav süresi bittiğinde, sistemde dosya yükleme işlemi kapatılacak olup sistem haricinde    hiç bir şekilde\n",
+        "başka bir platformdan dosyalar kabul edilmeyecektir.\n",
+        "*   Sınav süresi boyunca aklınıza takılan soruları arşivlenmesi amacıyla teams yoluyla kabul edeceğim :\n",
+        "sevdanur.genc@balikesir.edu.tr . Harici iletişim kanallarından gelen sorular kabul edilmeyecek ve\n",
+        "herhangi bir geri dönüş yapılmayacaktır.\n",
         "\n",
         "Başarılar dilerim.  \n",
         "Dr. Öğr. Üyesi Sevdanur GENÇ\n",
